# mac-kusto-explorer

./: .gitignore  ISSUES.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: release.yml
scripts/: highlight-check.cjs  prepare-release.mjs  smoke.cjs  tauri-frontend.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_bridge.rs  agent_data.rs  agent_runtime.rs  agent_tools.rs  auth.rs  commands.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/kusto/: client.rs  format.rs  mod.rs  model.rs  parser.rs  schema.rs
src-tauri/src/kusto/testdata/: schema_small.json  v1_databases.json  v1_schema.json  v2_count.json  v2_error.json  v2_rows.json
src-tauri/tests/: kusto_integration.rs
src/components/: AddConnectionDialog.test.tsx  AddConnectionDialog.tsx  ChartView.tsx  ConnectionsSidebar.test.tsx  ConnectionsSidebar.tsx  MonacoKustoEditor.tsx  QueryEditor.tsx  QueryTabs.test.tsx  QueryTabs.tsx  ResultsView.test.tsx  ResultsView.tsx  ShareExportButtons.tsx  Toaster.tsx  Toolbar.test.tsx  Toolbar.tsx
src/components/agent/: AgentModelControls.test.tsx  AgentModelControls.tsx  AgentPanel.tsx  AgentSessionBrowser.test.tsx  AgentSessionBrowser.tsx  AgentWorkingIndicator.test.tsx  AgentWorkingIndicator.tsx  ToolCallCard.test.tsx  ToolCallCard.tsx
src/components/context/: ContextEditorDialog.tsx  ContextManagerDialog.tsx
src/components/ui/: ContextMenu.tsx  (+1 more)
src/lib/: actions.test.ts  actions.ts  cell.test.ts  cell.ts  chart.test.ts  chart.ts  clipboard.test.ts  clipboard.ts  columnStats.test.ts  columnStats.ts  connection.test.ts  connection.ts  queryExecution.test.ts  queryExecution.ts  schemaFilter.test.ts  schemaFilter.ts  schemaFolders.test.ts  schemaFolders.ts  schemaSearch.test.ts  schemaSearch.ts  tauri.ts  utils.test.ts  utils.ts
src/store/: agentStore.test.ts  agentStore.ts  appStore.test.ts  appStore.ts  contextStore.ts  persist.test.ts  persist.ts  themeStore.ts  toast.ts
src/test/: setup.ts
src/types/: agent.ts  kusto.ts
(+5 files in other folders)
