[package]
name = "kusto-explorer"
version = "0.1.0"
description = "Cross-platform Kusto (Azure Data Explorer) query explorer"
authors = ["you"]
edition = "2021"

[lib]
name = "kusto_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["process", "time", "sync", "macros", "rt-multi-thread"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
